--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -54,7 +54,7 @@
         "select_language": "Select Language"
     },
     "home": {
-        "title": "ProxyCloud",
+        "title": "Proxy Cloud",
         "connect": "Connect",
         "disconnect": "Disconnect",
         "connecting": "Connecting...",
@@ -63,7 +63,7 @@
         "connection_failed": "Connection Failed",
         "select_server": "Select Server",
         "no_server_selected": "No server selected",
-        "connection_time": "Connected Time",
+        "connection_time": "Connection Time",
         "traffic_usage": "Traffic Usage",
         "download": "Download",
         "upload": "Upload",
@@ -73,14 +73,18 @@
         "subscriptions": "Subscriptions",
         "about": "About",
         "connection_statistics": "Connection Statistics",
-        "ip_information": "IP Information",
+        "checking_config": "Checking configuration...",
+        "config_ok": "Configuration OK",
+        "config_not_working": "Configuration not working",
+        "check_config": "Check Config",
+        "cant_get_ip": "Can't get IP information",
         "fetching": "Fetching...",
-        "cant_get_ip": "Can't get IP",
         "v2ray_link_copied": "V2Ray link copied to clipboard",
-        "no_v2ray_config": "No V2Ray configuration available to share",
-        "error_copying": "Error copying to clipboard",
-        "updating_subscriptions": "Updating all subscriptions...",
-        "subscriptions_updated": "All subscriptions updated successfully"
+        "no_v2ray_config": "No V2Ray configuration available",
+        "error_copying": "Error copying",
+        "ip_information": "IP Information",
+        "updating_subscriptions": "Updating subscriptions...",
+        "subscriptions_updated": "Subscriptions updated successfully"
     },
     "server_selector": {
         "connection_active": "Connection Active",
@@ -295,7 +299,8 @@
         "select_all": "Select All",
         "deselect_all": "Deselect All",
         "contact": "Contact",
-        "contact_on_telegram": "Contact on Telegram"
+        "contact_on_telegram": "Contact on Telegram",
+        "dismiss": "DISMISS"
     },
     "errors": {
         "network_error": "Network error occurred",
@@ -366,6 +371,8 @@
     "select_language_prompt": "Please select a language to continue",
     "select_language_title": "Select Language",
     "select_language_subtitle": "Choose your preferred language for the app interface",
+    "internet_for_all": "Internet for all; or for no one!",
+    "channels_and_sponsors_title": "ProxyCloud Channels & Sponsors",
     "telegram_proxy": {
         "title": "Telegram Proxies",
         "refresh": "Refresh",
@@ -444,26 +451,23 @@
         "could_not_launch": "Could not launch Telegram"
     },
     "subscription_management": {
-        "title": "Subscription Manager",
-        "manage_subs": "Manage Subs",
-        "help": "Help",
-        "update_all": "Update All Subscriptions",
+        "title": "Subscription Management",
+        "manage_subscriptions": "Manage Subscriptions",
         "add_subscription": "Add Subscription",
         "edit_subscription": "Edit Subscription",
         "name": "Name",
         "url": "URL",
-        "cancel": "Cancel",
-        "update": "Update",
         "add": "Add",
-        "no_subscriptions": "No subscriptions added yet",
-        "reserved_name_title": "Reserved Name",
-        "reserved_name_content": "The name \"Default\" is reserved for system use. Please choose a different name.",
+        "update": "Update",
+        "cancel": "Cancel",
+        "enter_name": "Please enter a name for the subscription",
+        "enter_url": "Please enter a subscription URL",
         "duplicate_name_title": "Duplicate Name",
-        "duplicate_name_content": "A subscription with the name \"{name}\" already exists. Please choose a different name.",
-        "updating_subscription": "Updating subscription...",
-        "subscription_updated": "Subscription updated successfully",
+        "name_exists": "A subscription with the name \"{name}\" already exists. Please choose a different name.",
         "adding_subscription": "Adding subscription...",
         "subscription_added": "Subscription added successfully",
+        "updating_subscription": "Updating subscription...",
+        "subscription_updated": "Subscription updated successfully",
         "delete_subscription": "Delete Subscription",
         "delete_confirmation": "Are you sure you want to delete \"{name}\"? This will also remove all servers from this subscription.",
         "subscription_deleted": "Subscription deleted successfully",
@@ -471,34 +475,42 @@
         "all_updated": "All subscriptions updated successfully",
         "cannot_delete_default": "Cannot delete default subscription",
         "how_to_add": "How to Add?",
+        "unique_name_for_subscription": "Give your subscription a unique name for easy identification.",
         "format_requirements": "Format Requirements:",
+        "v2ray_configs": "• V2Ray configurations (vmess://, vless://, ss://)",
+        "one_per_line": "• One configuration per line",
+        "supports": "• Supports base64 encoded subscription lists",
         "example": "Example:",
         "steps": "Steps:",
+        "unique_name_step": "1. Give your subscription a unique name",
+        "url_with_configs": "2. Enter a URL that contains V2Ray configurations",
         "got_it": "Got it",
+        "no_subscriptions": "No subscriptions added yet",
         "last_updated": "Last updated: ",
         "servers": "Servers: ",
-        "edit": "Edit",
-        "delete": "Delete",
-        "days_ago": " days ago",
-        "hours_ago": " hours ago",
-        "minutes_ago": " minutes ago",
-        "just_now": "Just now",
         "day": "day",
         "days": "days",
         "hour": "hour",
         "hours": "hours",
         "minute": "minute",
         "minutes": "minutes",
-        "enter_name": "Please enter a name for the subscription",
-        "enter_url": "Please enter a URL for the subscription",
-        "name_reserved": "The name \"Default\" is reserved for system use. Please choose a different name.",
-        "name_exists": "A subscription with the name \"{name}\" already exists. Please choose a different name.",
-        "unique_name": "Please enter a unique name for your subscription",
-        "v2ray_configs": "HTTP or HTTPS URL with V2Ray configs",
-        "one_per_line": "One configuration per line",
-        "supports": "Supports vless://, vmess://, ss://, etc.",
-        "unique_name_for_sub": "Enter a unique name for your subscription",
-        "url_with_configs": "Enter the URL containing V2Ray configurations",
-        "ago": "ago"
+        "ago": "ago",
+        "just_now": "just now",
+        "edit": "Edit",
+        "delete": "Delete",
+        "help": "Help",
+        "update_all": "Update All",
+        "reset_default_url": "Reset URL",
+        "reset_default_url_title": "Reset Default Subscription URL",
+        "reset_default_url_confirmation": "Are you sure you want to reset the default subscription URL to its original value?",
+        "default_url_reset": "Default subscription URL reset successfully"
+    },
+    "persian_gulf": {
+        "title": "Persian Gulf",
+        "message": "This is the Persian Gulf - has been, is, and will remain",
+        "card_title": "Persian Gulf for Ever"
+    },
+    "ircf": {
+        "channel": "IRCF"
     }
 }
