--- a/assets/languages/es.json
+++ b/assets/languages/es.json
@@ -54,7 +54,7 @@
     "select_language": "Seleccionar Idioma"
   },
   "home": {
-    "title": "ProxyCloud",
+    "title": "Proxy Cloud",
     "connect": "Conectar",
     "disconnect": "Desconectar",
     "connecting": "Conectando...",
@@ -63,7 +63,7 @@
     "connection_failed": "Conexión Fallida",
     "select_server": "Seleccionar Servidor",
     "no_server_selected": "Ningún servidor seleccionado",
-    "connection_time": "Tiempo Conectado",
+    "connection_time": "Tiempo de Conexión",
     "traffic_usage": "Uso de Tráfico",
     "download": "Descarga",
     "upload": "Subida",
@@ -73,14 +73,18 @@
     "subscriptions": "Suscripciones",
     "about": "Acerca de",
     "connection_statistics": "Estadísticas de Conexión",
-    "ip_information": "Información de IP",
+    "checking_config": "Verificando configuración...",
+    "config_ok": "Configuración OK",
+    "config_not_working": "Configuración no funciona",
+    "check_config": "Verificar Configuración",
+    "cant_get_ip": "No se puede obtener información de IP",
     "fetching": "Obteniendo...",
-    "cant_get_ip": "No se puede obtener la IP",
     "v2ray_link_copied": "Enlace V2Ray copiado al portapapeles",
-    "no_v2ray_config": "No hay configuración V2Ray disponible para compartir",
-    "error_copying": "Error al copiar al portapapeles",
-    "updating_subscriptions": "Actualizando todas las suscripciones...",
-    "subscriptions_updated": "Todas las suscripciones actualizadas exitosamente"
+    "no_v2ray_config": "No hay configuración V2Ray disponible",
+    "error_copying": "Error al copiar",
+    "ip_information": "Información de IP",
+    "updating_subscriptions": "Actualizando suscripciones...",
+    "subscriptions_updated": "Suscripciones actualizadas exitosamente"
   },
   "server_selector": {
     "connection_active": "Conexión Activa",
@@ -295,7 +299,8 @@
     "select_all": "Seleccionar Todo",
     "deselect_all": "Deseleccionar Todo",
     "contact": "Contacto",
-    "contact_on_telegram": "Contactar en Telegram"
+    "contact_on_telegram": "Contactar en Telegram",
+    "dismiss": "DESCARTAR"
   },
   "errors": {
     "network_error": "Ocurrió un error de red",
@@ -366,6 +371,8 @@
   "select_language_prompt": "Por favor seleccione un idioma para continuar",
   "select_language_title": "Seleccionar Idioma",
   "select_language_subtitle": "Elija su idioma preferido para la interfaz de la aplicación",
+  "internet_for_all": "¡Internet para todos; o para nadie!",
+  "channels_and_sponsors_title": "Canales y Patrocinadores de ProxyCloud",
   "telegram_proxy": {
     "title": "Proxies de Telegram",
     "refresh": "Actualizar",
@@ -424,26 +431,23 @@
     "could_not_launch": "No se pudo abrir Telegram"
   },
   "subscription_management": {
-    "title": "Gestor de Suscripciones",
-    "manage_subs": "Gestionar Suscripciones",
-    "help": "Ayuda",
-    "update_all": "Actualizar Todas las Suscripciones",
+    "title": "Gestión de Suscripciones",
+    "manage_subscriptions": "Gestionar Suscripciones",
     "add_subscription": "Agregar Suscripción",
     "edit_subscription": "Editar Suscripción",
     "name": "Nombre",
     "url": "URL",
-    "cancel": "Cancelar",
-    "update": "Actualizar",
     "add": "Agregar",
-    "no_subscriptions": "Aún no se han agregado suscripciones",
-    "reserved_name_title": "Nombre Reservado",
-    "reserved_name_content": "El nombre \"Default\" está reservado para uso del sistema. Por favor elija un nombre diferente.",
+    "update": "Actualizar",
+    "cancel": "Cancelar",
+    "enter_name": "Por favor, ingrese un nombre para la suscripción",
+    "enter_url": "Por favor, ingrese una URL de suscripción",
     "duplicate_name_title": "Nombre Duplicado",
-    "duplicate_name_content": "Ya existe una suscripción con el nombre \"{name}\". Por favor elija un nombre diferente.",
-    "updating_subscription": "Actualizando suscripción...",
-    "subscription_updated": "Suscripción actualizada exitosamente",
+    "name_exists": "Ya existe una suscripción con el nombre \"{name}\". Por favor, elija un nombre diferente.",
     "adding_subscription": "Agregando suscripción...",
     "subscription_added": "Suscripción agregada exitosamente",
+    "updating_subscription": "Actualizando suscripción...",
+    "subscription_updated": "Suscripción actualizada exitosamente",
     "delete_subscription": "Eliminar Suscripción",
     "delete_confirmation": "¿Está seguro de que desea eliminar \"{name}\"? Esto también eliminará todos los servidores de esta suscripción.",
     "subscription_deleted": "Suscripción eliminada exitosamente",
@@ -451,35 +455,35 @@
     "all_updated": "Todas las suscripciones actualizadas exitosamente",
     "cannot_delete_default": "No se puede eliminar la suscripción predeterminada",
     "how_to_add": "¿Cómo Agregar?",
+    "unique_name_for_subscription": "Asigne un nombre único a su suscripción para una fácil identificación.",
     "format_requirements": "Requisitos de Formato:",
+    "v2ray_configs": "• Configuraciones V2Ray (vmess://, vless://, ss://)",
+    "one_per_line": "• Una configuración por línea",
+    "supports": "• Soporta listas de suscripción codificadas en base64",
     "example": "Ejemplo:",
     "steps": "Pasos:",
+    "unique_name_step": "1. Asigne un nombre único a su suscripción",
+    "url_with_configs": "2. Ingrese una URL que contenga configuraciones V2Ray",
     "got_it": "Entendido",
+    "no_subscriptions": "Aún no se han agregado suscripciones",
     "last_updated": "Última actualización: ",
     "servers": "Servidores: ",
-    "edit": "Editar",
-    "delete": "Eliminar",
-    "days_ago": " días atrás",
-    "hours_ago": " horas atrás",
-    "minutes_ago": " minutos atrás",
-    "just_now": "Justo ahora",
     "day": "día",
     "days": "días",
     "hour": "hora",
     "hours": "horas",
     "minute": "minuto",
     "minutes": "minutos",
-    "enter_name": "Por favor ingrese un nombre para la suscripción",
-    "enter_url": "Por favor ingrese una URL para la suscripción",
-    "name_reserved": "El nombre \"Default\" está reservado para uso del sistema. Por favor elija un nombre diferente.",
-    "name_exists": "Ya existe una suscripción con el nombre \"{name}\". Por favor elija un nombre diferente.",
-    "unique_name": "Por favor ingrese un nombre único para su suscripción",
-    "v2ray_configs": "URL HTTP o HTTPS con configuraciones V2Ray",
-    "one_per_line": "Una configuración por línea",
-    "supports": "Soporta vless://, vmess://, ss://, etc.",
-    "unique_name_for_sub": "Ingrese un nombre único para su suscripción",
-    "url_with_configs": "Ingrese la URL que contiene las configuraciones V2Ray",
-    "ago": "atrás"
+    "ago": "hace",
+    "just_now": "ahora mismo",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "help": "Ayuda",
+    "update_all": "Actualizar Todo",
+    "reset_default_url": "Restablecer URL",
+    "reset_default_url_title": "Restablecer URL de Suscripción Predeterminada",
+    "reset_default_url_confirmation": "¿Está seguro de que desea restablecer la URL de la suscripción predeterminada a su valor original?",
+    "default_url_reset": "URL de suscripción predeterminada restablecida exitosamente"
   },
   "vpn_settings": {
     "title": "Configuración de VPN",
@@ -500,5 +504,13 @@
     "saved_success": "Configuración guardada exitosamente",
     "error_loading": "Error al cargar configuración: {error}",
     "error_saving": "Error al guardar configuración: {error}"
+  },
+  "persian_gulf": {
+    "title": "Golfo Pérsico",
+    "message": "Este es el Golfo Pérsico - ha sido, es y será",
+    "card_title": "Golfo Pérsico para Siempre"
+  },
+  "ircf": {
+    "channel": "IRCF"
   }
 }
