--- a/assets/languages/fa.json
+++ b/assets/languages/fa.json
@@ -54,7 +54,7 @@
         "select_language": "انتخاب زبان"
     },
     "home": {
-        "title": "ProxyCloud",
+        "title": "Proxy Cloud",
         "connect": "اتصال",
         "disconnect": "قطع اتصال",
         "connecting": "در حال اتصال...",
@@ -62,25 +62,29 @@
         "disconnected": "قطع شده",
         "connection_failed": "اتصال ناموفق",
         "select_server": "انتخاب سرور",
-        "no_server_selected": "هیچ سروری انتخاب نشده",
+        "no_server_selected": "سروری انتخاب نشده",
         "connection_time": "زمان اتصال",
-        "traffic_usage": "استفاده از ترافیک",
+        "traffic_usage": "مصرف ترافیک",
         "download": "دانلود",
         "upload": "آپلود",
         "ip_address": "آدرس IP",
-        "location": "موقعیت",
+        "location": "مکان",
         "refresh": "تازه‌سازی",
         "subscriptions": "اشتراک‌ها",
         "about": "درباره",
         "connection_statistics": "آمار اتصال",
-        "ip_information": "اطلاعات IP",
+        "checking_config": "در حال بررسی پیکربندی...",
+        "config_ok": "پیکربندی صحیح است",
+        "config_not_working": "پیکربندی کار نمی‌کند",
+        "check_config": "بررسی پیکربندی",
+        "cant_get_ip": "امکان دریافت اطلاعات IP وجود ندارد",
         "fetching": "در حال دریافت...",
-        "cant_get_ip": "نمی‌توان IP را دریافت کرد",
-        "v2ray_link_copied": "لینک V2Ray کپی شد",
-        "no_v2ray_config": "هیچ پیکربندی V2Ray برای اشتراک موجود نیست",
-        "error_copying": "خطا در کپی کردن",
-        "updating_subscriptions": "به‌روزرسانی همه اشتراک‌ها...",
-        "subscriptions_updated": "همه اشتراک‌ها با موفقیت به‌روزرسانی شدند"
+        "v2ray_link_copied": "لینک V2Ray در کلیپ‌بورد کپی شد",
+        "no_v2ray_config": "پیکربندی V2Ray موجود نیست",
+        "error_copying": "خطا در کپی",
+        "ip_information": "اطلاعات IP",
+        "updating_subscriptions": "در حال به‌روزرسانی اشتراک‌ها...",
+        "subscriptions_updated": "اشتراک‌ها با موفقیت به‌روز شدند"
     },
     "server_selector": {
         "connection_active": "اتصال فعال",
@@ -295,7 +299,8 @@
         "select_all": "انتخاب همه",
         "deselect_all": "لغو انتخاب همه",
         "contact": "تماس",
-        "contact_on_telegram": "تماس در تلگرام"
+        "contact_on_telegram": "تماس در تلگرام",
+        "dismiss": "رد کردن"
     },
     "errors": {
         "network_error": "خطای شبکه رخ داد",
@@ -366,6 +371,8 @@
     "select_language_prompt": "لطفاً برای ادامه یک زبان انتخاب کنید",
     "select_language_title": "انتخاب زبان",
     "select_language_subtitle": "زبان ترجیحی خود را برای رابط برنامه انتخاب کنید",
+    "internet_for_all": "اینترنت برای همه؛ یا هیچ‌کس!",
+    "channels_and_sponsors_title": "کانال‌ها و حامیان ProxyCloud",
     "telegram_proxy": {
         "title": "پروکسی‌های تلگرام",
         "refresh": "تازه‌سازی",
@@ -425,61 +432,58 @@
     },
     "subscription_management": {
         "title": "مدیریت اشتراک‌ها",
-        "manage_subs": "مدیریت اشتراک‌ها",
-        "help": "راهنما",
-        "update_all": "به‌روزرسانی همه اشتراک‌ها",
+        "manage_subscriptions": "مدیریت اشتراک‌ها",
         "add_subscription": "افزودن اشتراک",
         "edit_subscription": "ویرایش اشتراک",
         "name": "نام",
-        "url": "URL",
-        "cancel": "لغو",
-        "update": "به‌روزرسانی",
+        "url": "لینک",
         "add": "افزودن",
-        "no_subscriptions": "هنوز اشتراکی اضافه نشده",
-        "reserved_name_title": "نام رزرو شده",
-        "reserved_name_content": "نام \"Default\" برای استفاده سیستمی رزرو شده است. لطفاً نام دیگری انتخاب کنید.",
+        "update": "به‌روزرسانی",
+        "cancel": "لغو",
+        "enter_name": "لطفاً نامی برای اشتراک وارد کنید",
+        "enter_url": "لطفاً لینک اشتراک را وارد کنید",
         "duplicate_name_title": "نام تکراری",
-        "duplicate_name_content": "اشتراکی با نام \"{name}\" از قبل وجود دارد. لطفاً نام دیگری انتخاب کنید.",
-        "updating_subscription": "در حال به‌روزرسانی اشتراک...",
-        "subscription_updated": "اشتراک با موفقیت به‌روزرسانی شد",
+        "name_exists": "اشتراکی با نام \"{name}\" از قبل وجود دارد. لطفاً نام دیگری انتخاب کنید.",
         "adding_subscription": "در حال افزودن اشتراک...",
         "subscription_added": "اشتراک با موفقیت اضافه شد",
+        "updating_subscription": "در حال به‌روزرسانی اشتراک...",
+        "subscription_updated": "اشتراک با موفقیت به‌روز شد",
         "delete_subscription": "حذف اشتراک",
-        "delete_confirmation": "آیا مطمئن هستید که می‌خواهید \"{name}\" را حذف کنید؟ این کار همه سرورهای این اشتراک را نیز حذف می‌کند.",
+        "delete_confirmation": "آیا مطمئن هستید که می‌خواهید \"{name}\" را حذف کنید؟ این کار همچنین تمام سرورهای این اشتراک را حذف می‌کند.",
         "subscription_deleted": "اشتراک با موفقیت حذف شد",
         "updating_all": "در حال به‌روزرسانی همه اشتراک‌ها...",
-        "all_updated": "همه اشتراک‌ها با موفقیت به‌روزرسانی شدند",
+        "all_updated": "همه اشتراک‌ها با موفقیت به‌روز شدند",
         "cannot_delete_default": "نمی‌توان اشتراک پیش‌فرض را حذف کرد",
         "how_to_add": "چگونه اضافه کنیم؟",
+        "unique_name_for_subscription": "برای اشتراک خود نامی منحصر به فرد انتخاب کنید تا به راحتی قابل شناسایی باشد.",
         "format_requirements": "الزامات فرمت:",
+        "v2ray_configs": "• پیکربندی‌های V2Ray (vmess://, vless://, ss://)",
+        "one_per_line": "• یک پیکربندی در هر خط",
+        "supports": "• از لیست‌های اشتراک کدگذاری شده base64 پشتیبانی می‌کند",
         "example": "مثال:",
         "steps": "مراحل:",
+        "unique_name_step": "1. برای اشتراک خود نامی منحصر به فرد انتخاب کنید",
+        "url_with_configs": "2. لینکی وارد کنید که شامل پیکربندی‌های V2Ray باشد",
         "got_it": "متوجه شدم",
+        "no_subscriptions": "هنوز اشتراکی اضافه نشده است",
         "last_updated": "آخرین به‌روزرسانی: ",
         "servers": "سرورها: ",
-        "edit": "ویرایش",
-        "delete": "حذف",
-        "days_ago": " روز پیش",
-        "hours_ago": " ساعت پیش",
-        "minutes_ago": " دقیقه پیش",
-        "just_now": "همین الان",
         "day": "روز",
         "days": "روز",
         "hour": "ساعت",
         "hours": "ساعت",
         "minute": "دقیقه",
         "minutes": "دقیقه",
-        "enter_name": "لطفاً نامی برای اشتراک وارد کنید",
-        "enter_url": "لطفاً URL اشتراک را وارد کنید",
-        "name_reserved": "نام \"Default\" برای استفاده سیستمی رزرو شده است. لطفاً نام دیگری انتخاب کنید.",
-        "name_exists": "اشتراکی با نام \"{name}\" از قبل وجود دارد. لطفاً نام دیگری انتخاب کنید.",
-        "unique_name": "لطفاً نامی منحصر به فرد برای اشتراک خود وارد کنید",
-        "v2ray_configs": "URL HTTP یا HTTPS با پیکربندی‌های V2Ray",
-        "one_per_line": "یک پیکربندی در هر خط",
-        "supports": "پشتیبانی از vless://، vmess://، ss:// و غیره",
-        "unique_name_for_sub": "نامی منحصر به فرد برای اشتراک خود وارد کنید",
-        "url_with_configs": "URL حاوی پیکربندی‌های V2Ray را وارد کنید",
-        "ago": "پیش"
+        "ago": "پیش",
+        "just_now": "همین الان",
+        "edit": "ویرایش",
+        "delete": "حذف",
+        "help": "راهنما",
+        "update_all": "به‌روزرسانی همه",
+        "reset_default_url": "بازنشانی لینک",
+        "reset_default_url_title": "بازنشانی لینک اشتراک پیش‌فرض",
+        "reset_default_url_confirmation": "آیا مطمئن هستید که می‌خواهید لینک اشتراک پیش‌فرض را به مقدار اصلی آن بازنشانی کنید؟",
+        "default_url_reset": "لینک اشتراک پیش‌فرض با موفقیت بازنشانی شد"
     },
     "vpn_settings": {
         "title": "تنظیمات VPN",
@@ -500,5 +504,13 @@
         "saved_success": "تنظیمات با موفقیت ذخیره شد",
         "error_loading": "خطا در بارگیری تنظیمات: {error}",
         "error_saving": "خطا در ذخیره تنظیمات: {error}"
+    },
+    "persian_gulf": {
+        "title": "خلیج فارس",
+        "message": "اینجا خلیج فارس بوده - هست و خواهد ماند",
+        "card_title": "خلیج فارس برای همیشه"
+    },
+    "ircf": {
+        "channel": "IRCF"
     }
 }
