--- a/assets/languages/fr.json
+++ b/assets/languages/fr.json
@@ -54,33 +54,37 @@
     "select_language": "Sélectionner la Langue"
   },
   "home": {
-    "title": "ProxyCloud",
+    "title": "Proxy Cloud",
     "connect": "Connecter",
     "disconnect": "Déconnecter",
     "connecting": "Connexion en cours...",
     "connected": "Connecté",
     "disconnected": "Déconnecté",
-    "connection_failed": "Connexion Échouée",
-    "select_server": "Sélectionner un Serveur",
+    "connection_failed": "Échec de la connexion",
+    "select_server": "Sélectionner un serveur",
     "no_server_selected": "Aucun serveur sélectionné",
-    "connection_time": "Temps de Connexion",
-    "traffic_usage": "Utilisation du Trafic",
-    "download": "Téléchargement",
-    "upload": "Téléversement",
+    "connection_time": "Temps de connexion",
+    "traffic_usage": "Utilisation du trafic",
+    "download": "Télécharger",
+    "upload": "Téléverser",
     "ip_address": "Adresse IP",
     "location": "Emplacement",
     "refresh": "Actualiser",
     "subscriptions": "Abonnements",
-    "about": "À Propos",
-    "connection_statistics": "Statistiques de Connexion",
-    "ip_information": "Informations IP",
-    "fetching": "Récupération en cours...",
-    "cant_get_ip": "Impossible d'obtenir l'IP",
+    "about": "À propos",
+    "connection_statistics": "Statistiques de connexion",
+    "checking_config": "Vérification de la configuration...",
+    "config_ok": "Configuration OK",
+    "config_not_working": "Configuration non fonctionnelle",
+    "check_config": "Vérifier la configuration",
+    "cant_get_ip": "Impossible d'obtenir les informations IP",
+    "fetching": "Récupération...",
     "v2ray_link_copied": "Lien V2Ray copié dans le presse-papiers",
-    "no_v2ray_config": "Aucune configuration V2Ray disponible à partager",
-    "error_copying": "Erreur lors de la copie dans le presse-papiers",
-    "updating_subscriptions": "Mise à jour de tous les abonnements...",
-    "subscriptions_updated": "Tous les abonnements mis à jour avec succès"
+    "no_v2ray_config": "Aucune configuration V2Ray disponible",
+    "error_copying": "Erreur de copie",
+    "ip_information": "Informations IP",
+    "updating_subscriptions": "Mise à jour des abonnements...",
+    "subscriptions_updated": "Abonnements mis à jour avec succès"
   },
   "server_selector": {
     "connection_active": "Connexion Active",
@@ -295,7 +299,8 @@
     "select_all": "Tout Sélectionner",
     "deselect_all": "Tout Déselectionner",
     "contact": "Contact",
-    "contact_on_telegram": "Contacter sur Telegram"
+    "contact_on_telegram": "Contacter sur Telegram",
+    "dismiss": "REJETER"
   },
   "errors": {
     "network_error": "Une erreur réseau s'est produite",
@@ -366,6 +371,8 @@
   "select_language_prompt": "Veuillez sélectionner une langue pour continuer",
   "select_language_title": "Sélectionner la Langue",
   "select_language_subtitle": "Choisissez votre langue préférée pour l'interface de l'application",
+  "internet_for_all": "Internet pour tous ; ou pour personne !",
+  "channels_and_sponsors_title": "Chaînes et Sponsors de ProxyCloud",
   "telegram_proxy": {
     "title": "Proxies Telegram",
     "refresh": "Actualiser",
@@ -424,62 +431,59 @@
     "could_not_launch": "Impossible d'ouvrir Telegram"
   },
   "subscription_management": {
-    "title": "Gestionnaire d'Abonnements",
-    "manage_subs": "Gérer les Abonnements",
-    "help": "Aide",
-    "update_all": "Mettre à Jour Tous les Abonnements",
+    "title": "Gestion des Abonnements",
+    "manage_subscriptions": "Gérer les Abonnements",
     "add_subscription": "Ajouter un Abonnement",
-    "edit_subscription": "Modifier l'Abonnement",
+    "edit_subscription": "Modifier un Abonnement",
     "name": "Nom",
     "url": "URL",
-    "cancel": "Annuler",
-    "update": "Mettre à Jour",
     "add": "Ajouter",
-    "no_subscriptions": "Aucun abonnement ajouté pour le moment",
-    "reserved_name_title": "Nom Réservé",
-    "reserved_name_content": "Le nom \"Default\" est réservé à l'usage système. Veuillez choisir un nom différent.",
+    "update": "Mettre à jour",
+    "cancel": "Annuler",
+    "enter_name": "Veuillez entrer un nom pour l'abonnement",
+    "enter_url": "Veuillez entrer une URL d'abonnement",
     "duplicate_name_title": "Nom Dupliqué",
-    "duplicate_name_content": "Un abonnement avec le nom \"{name}\" existe déjà. Veuillez choisir un nom différent.",
-    "updating_subscription": "Mise à jour de l'abonnement en cours...",
-    "subscription_updated": "Abonnement mis à jour avec succès",
-    "adding_subscription": "Ajout de l'abonnement en cours...",
+    "name_exists": "Un abonnement avec le nom \"{name}\" existe déjà. Veuillez choisir un nom différent.",
+    "adding_subscription": "Ajout de l'abonnement...",
     "subscription_added": "Abonnement ajouté avec succès",
+    "updating_subscription": "Mise à jour de l'abonnement...",
+    "subscription_updated": "Abonnement mis à jour avec succès",
     "delete_subscription": "Supprimer l'Abonnement",
     "delete_confirmation": "Êtes-vous sûr de vouloir supprimer \"{name}\" ? Cela supprimera également tous les serveurs de cet abonnement.",
     "subscription_deleted": "Abonnement supprimé avec succès",
-    "updating_all": "Mise à jour de tous les abonnements en cours...",
+    "updating_all": "Mise à jour de tous les abonnements...",
     "all_updated": "Tous les abonnements mis à jour avec succès",
     "cannot_delete_default": "Impossible de supprimer l'abonnement par défaut",
     "how_to_add": "Comment Ajouter ?",
+    "unique_name_for_subscription": "Donnez un nom unique à votre abonnement pour une identification facile.",
     "format_requirements": "Exigences de Format :",
+    "v2ray_configs": "• Configurations V2Ray (vmess://, vless://, ss://)",
+    "one_per_line": "• Une configuration par ligne",
+    "supports": "• Prend en charge les listes d'abonnements encodées en base64",
     "example": "Exemple :",
     "steps": "Étapes :",
+    "unique_name_step": "1. Donnez un nom unique à votre abonnement",
+    "url_with_configs": "2. Entrez une URL contenant des configurations V2Ray",
     "got_it": "Compris",
+    "no_subscriptions": "Aucun abonnement ajouté pour le moment",
     "last_updated": "Dernière mise à jour : ",
     "servers": "Serveurs : ",
-    "edit": "Modifier",
-    "delete": "Supprimer",
-    "days_ago": " jours auparavant",
-    "hours_ago": " heures auparavant",
-    "minutes_ago": " minutes auparavant",
-    "just_now": "À l'instant",
     "day": "jour",
     "days": "jours",
     "hour": "heure",
     "hours": "heures",
     "minute": "minute",
     "minutes": "minutes",
-    "enter_name": "Veuillez entrer un nom pour l'abonnement",
-    "enter_url": "Veuillez entrer une URL pour l'abonnement",
-    "name_reserved": "Le nom \"Default\" est réservé à l'usage système. Veuillez choisir un nom différent.",
-    "name_exists": "Un abonnement avec le nom \"{name}\" existe déjà. Veuillez choisir un nom différent.",
-    "unique_name": "Veuillez entrer un nom unique pour votre abonnement",
-    "v2ray_configs": "URL HTTP ou HTTPS avec configurations V2Ray",
-    "one_per_line": "Une configuration par ligne",
-    "supports": "Supporte vless://, vmess://, ss://, etc.",
-    "unique_name_for_sub": "Entrez un nom unique pour votre abonnement",
-    "url_with_configs": "Entrez l'URL contenant les configurations V2Ray",
-    "ago": "auparavant"
+    "ago": "il y a",
+    "just_now": "à l'instant",
+    "edit": "Modifier",
+    "delete": "Supprimer",
+    "help": "Aide",
+    "update_all": "Tout Mettre à Jour",
+    "reset_default_url": "Réinitialiser l'URL",
+    "reset_default_url_title": "Réinitialiser l'URL de l'Abonnement par Défaut",
+    "reset_default_url_confirmation": "Êtes-vous sûr de vouloir réinitialiser l'URL de l'abonnement par défaut à sa valeur originale ?",
+    "default_url_reset": "URL de l'abonnement par défaut réinitialisée avec succès"
   },
   "vpn_settings": {
     "title": "Paramètres VPN",
@@ -500,5 +504,13 @@
     "saved_success": "Paramètres enregistrés avec succès",
     "error_loading": "Erreur lors du chargement des paramètres : {error}",
     "error_saving": "Erreur lors de l'enregistrement des paramètres : {error}"
+  },
+  "persian_gulf": {
+    "title": "Golfe Persique",
+    "message": "C'est le Golfe Persique - a été, est et restera",
+    "card_title": "Golfe Persique pour Toujours"
+  },
+  "ircf": {
+    "channel": "IRCF"
   }
 }
