--- a/assets/languages/ru.json
+++ b/assets/languages/ru.json
@@ -54,7 +54,7 @@
     "select_language": "Выбрать язык"
   },
   "home": {
-    "title": "ProxyCloud",
+    "title": "Proxy Cloud",
     "connect": "Подключить",
     "disconnect": "Отключить",
     "connecting": "Подключение...",
@@ -63,7 +63,7 @@
     "connection_failed": "Ошибка подключения",
     "select_server": "Выбрать сервер",
     "no_server_selected": "Сервер не выбран",
-    "connection_time": "Время подключения",
+    "connection_time": "Время соединения",
     "traffic_usage": "Использование трафика",
     "download": "Загрузка",
     "upload": "Отправка",
@@ -73,14 +73,18 @@
     "subscriptions": "Подписки",
     "about": "О приложении",
     "connection_statistics": "Статистика подключения",
-    "ip_information": "Информация об IP",
+    "checking_config": "Проверка конфигурации...",
+    "config_ok": "Конфигурация в порядке",
+    "config_not_working": "Конфигурация не работает",
+    "check_config": "Проверить конфигурацию",
+    "cant_get_ip": "Не удалось получить информацию об IP",
     "fetching": "Получение...",
-    "cant_get_ip": "Не удается получить IP",
     "v2ray_link_copied": "Ссылка V2Ray скопирована в буфер обмена",
-    "no_v2ray_config": "Нет доступной конфигурации V2Ray для обмена",
-    "error_copying": "Ошибка копирования в буфер обмена",
-    "updating_subscriptions": "Обновление всех подписок...",
-    "subscriptions_updated": "Все подписки успешно обновлены"
+    "no_v2ray_config": "Нет доступной конфигурации V2Ray",
+    "error_copying": "Ошибка копирования",
+    "ip_information": "Информация об IP",
+    "updating_subscriptions": "Обновление подписок...",
+    "subscriptions_updated": "Подписки успешно обновлены"
   },
   "server_selector": {
     "connection_active": "Активное подключение",
@@ -295,7 +299,8 @@
     "select_all": "Выбрать все",
     "deselect_all": "Отменить выбор",
     "contact": "Контакт",
-    "contact_on_telegram": "Связаться в Telegram"
+    "contact_on_telegram": "Связаться в Telegram",
+    "dismiss": "ОТКЛОНИТЬ"
   },
   "errors": {
     "network_error": "Произошла сетевая ошибка",
@@ -366,6 +371,8 @@
   "select_language_prompt": "Пожалуйста, выберите язык, чтобы продолжить",
   "select_language_title": "Выбрать язык",
   "select_language_subtitle": "Выберите предпочитаемый язык для интерфейса приложения",
+  "internet_for_all": "Интернет для всех; или ни для кого!",
+  "channels_and_sponsors_title": "Каналы и спонсоры ProxyCloud",
   "telegram_proxy": {
     "title": "Прокси Telegram",
     "refresh": "Обновить",
@@ -424,62 +431,59 @@
     "could_not_launch": "Не удалось открыть Telegram"
   },
   "subscription_management": {
-    "title": "Менеджер подписок",
-    "manage_subs": "Управление подписками",
-    "help": "Помощь",
-    "update_all": "Обновить все подписки",
-    "add_subscription": "Добавить подписку",
-    "edit_subscription": "Редактировать подписку",
-    "name": "Имя",
+    "title": "Управление Подписками",
+    "manage_subscriptions": "Управление Подписками",
+    "add_subscription": "Добавить Подписку",
+    "edit_subscription": "Редактировать Подписку",
+    "name": "Название",
     "url": "URL",
-    "cancel": "Отмена",
-    "update": "Обновить",
     "add": "Добавить",
-    "no_subscriptions": "Пока нет добавленных подписок",
-    "reserved_name_title": "Зарезервированное имя",
-    "reserved_name_content": "Имя \"Default\" зарезервировано для системного использования. Пожалуйста, выберите другое имя.",
-    "duplicate_name_title": "Дублирующееся имя",
-    "duplicate_name_content": "Подписка с именем \"{name}\" уже существует. Пожалуйста, выберите другое имя.",
-    "updating_subscription": "Обновление подписки...",
-    "subscription_updated": "Подписка успешно обновлена",
+    "update": "Обновить",
+    "cancel": "Отмена",
+    "enter_name": "Пожалуйста, введите название подписки",
+    "enter_url": "Пожалуйста, введите URL подписки",
+    "duplicate_name_title": "Дубликат Названия",
+    "name_exists": "Подписка с названием \"{name}\" уже существует. Пожалуйста, выберите другое название.",
     "adding_subscription": "Добавление подписки...",
     "subscription_added": "Подписка успешно добавлена",
-    "delete_subscription": "Удалить подписку",
+    "updating_subscription": "Обновление подписки...",
+    "subscription_updated": "Подписка успешно обновлена",
+    "delete_subscription": "Удалить Подписку",
     "delete_confirmation": "Вы уверены, что хотите удалить \"{name}\"? Это также удалит все серверы из этой подписки.",
     "subscription_deleted": "Подписка успешно удалена",
     "updating_all": "Обновление всех подписок...",
     "all_updated": "Все подписки успешно обновлены",
     "cannot_delete_default": "Невозможно удалить подписку по умолчанию",
-    "how_to_add": "Как добавить?",
-    "format_requirements": "Требования к формату:",
+    "how_to_add": "Как Добавить?",
+    "unique_name_for_subscription": "Дайте вашей подписке уникальное название для легкой идентификации.",
+    "format_requirements": "Требования к Формату:",
+    "v2ray_configs": "• Конфигурации V2Ray (vmess://, vless://, ss://)",
+    "one_per_line": "• Одна конфигурация на строку",
+    "supports": "• Поддерживает списки подписок в кодировке base64",
     "example": "Пример:",
     "steps": "Шаги:",
+    "unique_name_step": "1. Дайте вашей подписке уникальное название",
+    "url_with_configs": "2. Введите URL, содержащий конфигурации V2Ray",
     "got_it": "Понятно",
+    "no_subscriptions": "Пока не добавлено ни одной подписки",
     "last_updated": "Последнее обновление: ",
     "servers": "Серверы: ",
-    "edit": "Редактировать",
-    "delete": "Удалить",
-    "days_ago": " дней назад",
-    "hours_ago": " часов назад",
-    "minutes_ago": " минут назад",
-    "just_now": "Только что",
     "day": "день",
     "days": "дней",
     "hour": "час",
     "hours": "часов",
     "minute": "минута",
     "minutes": "минут",
-    "enter_name": "Пожалуйста, введите имя для подписки",
-    "enter_url": "Пожалуйста, введите URL для подписки",
-    "name_reserved": "Имя \"Default\" зарезервировано для системного использования. Пожалуйста, выберите другое имя.",
-    "name_exists": "Подписка с именем \"{name}\" уже существует. Пожалуйста, выберите другое имя.",
-    "unique_name": "Пожалуйста, введите уникальное имя для вашей подписки",
-    "v2ray_configs": "HTTP или HTTPS URL с конфигурациями V2Ray",
-    "one_per_line": "Одна конфигурация на строку",
-    "supports": "Поддерживает vless://, vmess://, ss:// и т.д.",
-    "unique_name_for_sub": "Введите уникальное имя для вашей подписки",
-    "url_with_configs": "Введите URL, содержащий конфигурации V2Ray",
-    "ago": "назад"
+    "ago": "назад",
+    "just_now": "только что",
+    "edit": "Редактировать",
+    "delete": "Удалить",
+    "help": "Помощь",
+    "update_all": "Обновить Все",
+    "reset_default_url": "Сбросить URL",
+    "reset_default_url_title": "Сбросить URL Подписки по Умолчанию",
+    "reset_default_url_confirmation": "Вы уверены, что хотите сбросить URL подписки по умолчанию к оригинальному значению?",
+    "default_url_reset": "URL подписки по умолчанию успешно сброшен"
   },
   "vpn_settings": {
     "title": "Настройки VPN",
@@ -500,5 +504,13 @@
     "saved_success": "Настройки успешно сохранены",
     "error_loading": "Ошибка загрузки настроек: {error}",
     "error_saving": "Ошибка сохранения настроек: {error}"
+  },
+  "persian_gulf": {
+    "title": "Персидский залив",
+    "message": "Это Персидский залив - был, есть и останется",
+    "card_title": "Персидский залив навсегда"
+  },
+  "ircf": {
+    "channel": "IRCF"
   }
 }
