--- a/assets/languages/zh.json
+++ b/assets/languages/zh.json
@@ -54,7 +54,7 @@
     "select_language": "选择语言"
   },
   "home": {
-    "title": "ProxyCloud",
+    "title": "Proxy Cloud",
     "connect": "连接",
     "disconnect": "断开连接",
     "connecting": "连接中...",
@@ -73,14 +73,18 @@
     "subscriptions": "订阅",
     "about": "关于",
     "connection_statistics": "连接统计",
-    "ip_information": "IP信息",
+    "checking_config": "检查配置中...",
+    "config_ok": "配置正常",
+    "config_not_working": "配置不工作",
+    "check_config": "检查配置",
+    "cant_get_ip": "无法获取IP信息",
     "fetching": "获取中...",
-    "cant_get_ip": "无法获取IP",
     "v2ray_link_copied": "V2Ray链接已复制到剪贴板",
-    "no_v2ray_config": "没有可用的V2Ray配置进行分享",
-    "error_copying": "复制到剪贴板时出错",
-    "updating_subscriptions": "更新所有订阅...",
-    "subscriptions_updated": "所有订阅更新成功"
+    "no_v2ray_config": "无可用的V2Ray配置",
+    "error_copying": "复制错误",
+    "ip_information": "IP信息",
+    "updating_subscriptions": "更新订阅中...",
+    "subscriptions_updated": "订阅更新成功"
   },
   "server_selector": {
     "connection_active": "连接活跃",
@@ -295,7 +299,8 @@
     "select_all": "全选",
     "deselect_all": "取消全选",
     "contact": "联系",
-    "contact_on_telegram": "在Telegram上联系"
+    "contact_on_telegram": "在Telegram上联系",
+    "dismiss": "DISMISS"
   },
   "errors": {
     "network_error": "发生网络错误",
@@ -366,6 +371,8 @@
   "select_language_prompt": "请选择一种语言以继续",
   "select_language_title": "选择语言",
   "select_language_subtitle": "为应用程序界面选择您喜欢的语言",
+  "internet_for_all": "互联网属于所有人；或者不属于任何人！",
+  "channels_and_sponsors_title": "ProxyCloud 频道和赞助商",
   "telegram_proxy": {
     "title": "Telegram代理",
     "refresh": "刷新",
@@ -424,62 +431,59 @@
     "could_not_launch": "无法打开Telegram"
   },
   "subscription_management": {
-    "title": "订阅管理器",
-    "manage_subs": "管理订阅",
-    "help": "帮助",
-    "update_all": "更新所有订阅",
+    "title": "订阅管理",
+    "manage_subscriptions": "管理订阅",
     "add_subscription": "添加订阅",
     "edit_subscription": "编辑订阅",
     "name": "名称",
     "url": "URL",
-    "cancel": "取消",
-    "update": "更新",
     "add": "添加",
-    "no_subscriptions": "尚未添加订阅",
-    "reserved_name_title": "保留名称",
-    "reserved_name_content": "\"Default\"名称保留供系统使用。请选择其他名称。",
-    "duplicate_name_title": "重复名称",
-    "duplicate_name_content": "已存在名为\"{name}\"的订阅。请选择其他名称。",
-    "updating_subscription": "更新订阅中...",
-    "subscription_updated": "订阅更新成功",
-    "adding_subscription": "添加订阅中...",
+    "update": "更新",
+    "cancel": "取消",
+    "enter_name": "请输入订阅名称",
+    "enter_url": "请输入订阅URL",
+    "duplicate_name_title": "名称重复",
+    "name_exists": "已存在名为\"{name}\"的订阅。请选择其他名称。",
+    "adding_subscription": "正在添加订阅...",
     "subscription_added": "订阅添加成功",
+    "updating_subscription": "正在更新订阅...",
+    "subscription_updated": "订阅更新成功",
     "delete_subscription": "删除订阅",
-    "delete_confirmation": "您确定要删除\"{name}\"吗？这也将删除此订阅中的所有服务器。",
+    "delete_confirmation": "您确定要删除\"{name}\"吗？这将同时删除此订阅中的所有服务器。",
     "subscription_deleted": "订阅删除成功",
-    "updating_all": "更新所有订阅中...",
+    "updating_all": "正在更新所有订阅...",
     "all_updated": "所有订阅更新成功",
     "cannot_delete_default": "无法删除默认订阅",
     "how_to_add": "如何添加？",
+    "unique_name_for_subscription": "为您的订阅指定一个唯一名称以便识别。",
     "format_requirements": "格式要求：",
+    "v2ray_configs": "• V2Ray配置（vmess://, vless://, ss://）",
+    "one_per_line": "• 每行一个配置",
+    "supports": "• 支持base64编码的订阅列表",
     "example": "示例：",
     "steps": "步骤：",
+    "unique_name_step": "1. 为您的订阅指定一个唯一名称",
+    "url_with_configs": "2. 输入包含V2Ray配置的URL",
     "got_it": "知道了",
+    "no_subscriptions": "尚未添加订阅",
     "last_updated": "最后更新：",
     "servers": "服务器：",
-    "edit": "编辑",
-    "delete": "删除",
-    "days_ago": "天前",
-    "hours_ago": "小时前",
-    "minutes_ago": "分钟前",
-    "just_now": "刚刚",
     "day": "天",
     "days": "天",
     "hour": "小时",
     "hours": "小时",
     "minute": "分钟",
     "minutes": "分钟",
-    "enter_name": "请输入订阅名称",
-    "enter_url": "请输入订阅URL",
-    "name_reserved": "\"Default\"名称保留供系统使用。请选择其他名称。",
-    "name_exists": "已存在名为\"{name}\"的订阅。请选择其他名称。",
-    "unique_name": "请输入唯一的订阅名称",
-    "v2ray_configs": "包含V2Ray配置的HTTP或HTTPS URL",
-    "one_per_line": "每行一个配置",
-    "supports": "支持vless://、vmess://、ss://等",
-    "unique_name_for_sub": "为您的订阅输入唯一名称",
-    "url_with_configs": "输入包含V2Ray配置的URL",
-    "ago": "前"
+    "ago": "前",
+    "just_now": "刚刚",
+    "edit": "编辑",
+    "delete": "删除",
+    "help": "帮助",
+    "update_all": "全部更新",
+    "reset_default_url": "重置URL",
+    "reset_default_url_title": "重置默认订阅URL",
+    "reset_default_url_confirmation": "您确定要将默认订阅URL重置为原始值吗？",
+    "default_url_reset": "默认订阅URL重置成功"
   },
   "vpn_settings": {
     "title": "VPN设置",
@@ -500,5 +504,13 @@
     "saved_success": "设置保存成功",
     "error_loading": "加载设置时出错：{error}",
     "error_saving": "保存设置时出错：{error}"
+  },
+  "persian_gulf": {
+    "title": "波斯湾",
+    "message": "这是波斯湾——曾经是，现在是，将来也是",
+    "card_title": "波斯湾永远存在"
+  },
+  "ircf": {
+    "channel": "IRCF"
   }
 }
